--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,4 @@
 @import "./uitils/resert";
+@import "./uitils/fonts";
 @import "./uitils/variables";
-@import "./components/footer";
+// @import "./components/footer";
