--- a/styles/global.css
+++ b/styles/global.css
@@ -159,5 +159,25 @@ button {
   src: url("../../assets/fonts/NotoSansGeorgian-VariableFont_wdth,wght.ttf");
 }
 .body {
-  font-family: "Noto Sans Georgian";
+  font-family: "Noto Sans Georgian", sans-serif;
+}
+
+body header {
+  background-color: black;
+}
+body header .header_container {
+  max-width: 1440px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+body header .header_container .header_content {
+  max-width: 1110px;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }/*# sourceMappingURL=global.css.map */
