--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./uitils/resert";
 @import "./uitils/fonts";
 @import "./uitils/variables";
+@import "./components/header";
 // @import "./components/footer";
