--- a/styles/global.css
+++ b/styles/global.css
@@ -162,6 +162,9 @@ button {
   font-family: "Noto Sans Georgian", sans-serif;
 }
 
+body {
+  background-color: black;
+}
 body header {
   background-color: black;
 }
@@ -180,4 +183,11 @@ body header .header_container .header_content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+body header .underLine {
+  max-width: 1110px;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #979797;
+  height: 1px;
 }/*# sourceMappingURL=global.css.map */
